# QrssPiG

./: .travis.yml  CMakeLists.txt  ChangeLog  README.md  THANKS  install-libhackrf.sh  qrsspig.yaml.template
cmake/Modules/: FindLibAlsa.cmake  FindLibBoostFilesystem.cmake  FindLibBoostProgramOptions.cmake  FindLibBoostSystem.cmake  FindLibCurl.cmake  FindLibFftw3.cmake  FindLibGd.cmake  FindLibHackRF.cmake  FindLibLiquidSDR.cmake  FindLibRTFilter.cmake  FindLibRtlSdr.cmake  FindLibSSH.cmake  FindLibYaml.cmake
debian/: changelog  control  control.artful  control.buster  control.jessie  control.stretch  control.trusty  control.xenial  copyright  rules
docker/: Dockerfile_build_Debian_10  Dockerfile_build_Debian_9  Dockerfile_build_Debian_Buster  Dockerfile_build_Ubuntu16.04  Dockerfile_build_Ubuntu_16.04  Dockerfile_build_Ubuntu_16.10  Dockerfile_build_Ubuntu_17.04  Dockerfile_build_Ubuntu_17.10  Dockerfile_build_Ubuntu_18.04  Dockerfile_build_artful  Dockerfile_build_bionic  Dockerfile_build_jessie  Dockerfile_build_stretch  Dockerfile_build_trusty  Dockerfile_build_xenial  Dockerfile_build_zesty  build.sh  build_debian9.sh  build_debian_10.sh  build_debian_8.sh  build_debian_9.sh  build_debian_buster.sh  build_ubuntu16.04.sh  build_ubuntu17.04.sh  build_ubuntu_14.04.sh  build_ubuntu_16.04.sh  build_ubuntu_16.10.sh  build_ubuntu_17.04.sh  build_ubuntu_17.10.sh  build_ubuntu_18.04.sh  debuild.sh  debuild_binary.sh  debuild_binary_host.sh  debuild_host.sh  gen_images.sh
scripts/: install-libhackrf.sh
src/: CMakeLists.txt  Config.h.in  IQGen.cpp  QGDownSampler.cpp  QGDownSampler.h  QGFft.cpp  QGFft.h  QGImage.cpp  QGImage.h  QGInput.h  QGInputAlsa.cpp  QGInputAlsa.h  QGInputDevice.cpp  QGInputDevice.h  QGInputHackRF.cpp  QGInputHackRF.h  QGInputRtlSdr.cpp  QGInputRtlSdr.h  QGInputStdIn.cpp  QGInputStdIn.h  QGLocalUploader.cpp  QGLocalUploader.h  QGOutput.cpp  QGOutput.h  QGPlugin.h  QGProcessor.cpp  QGProcessor.h  QGSCPUploader.cpp  QGSCPUploader.h  QGUploader.cpp  QGUploader.h  QGUploaderFTP.cpp  QGUploaderFTP.h  QGUploaderLocal.cpp  QGUploaderLocal.h  QGUploaderSCP.cpp  QGUploaderSCP.h  QGUtils.cpp  QGUtils.h  QrssPiG.cpp  (+3 more)
src/plugins/: CMakeLists.txt
src/plugins/input/: CMakeLists.txt
src/plugins/input/alsa/: CMakeLists.txt  QGInputAlsa.cpp
src/plugins/input/hackrf/: CMakeLists.txt  QGInputHackRF.cpp  QGInputHackRF.h
src/plugins/input/rtlsdr/: CMakeLists.txt  QGInputRtlSdr.cpp  QGInputRtlSdr.h
src/plugins/input/stdin/: CMakeLists.txt  QGInputStdIn.cpp
src/plugins/output/image/: CMakeLists.txt  QGImage.cpp
src/plugins/upload/: CMakeLists.txt
src/plugins/upload/ftp/: CMakeLists.txt  QGUploaderFTP.cpp  QGUploaderFTP.h
src/plugins/upload/local/: CMakeLists.txt  QGUploaderLocal.cpp
src/plugins/upload/scp/: CMakeLists.txt  QGUploaderSCP.cpp  QGUploaderSCP.h
test/iqfiles/: rtl_sdr_145000000_2048_1000s.iq
